update store data in DynamoDB
